[package]
name = "b-tree"
version = "0.1.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "A persistent B+ tree using freqfs"
license = "Apache-2.0"
readme = "README.md"
keywords = ["persistent", "ordered", "key", "key-value", "index", "collection"]
categories = ["database", "database-implementations", "data-structures"]

[[example]]
name = "example"

[dependencies]
async-trait = "0.1"
collate = { path = "../collate" }
destream = { path = "../destream" }
freqfs = { path = "../freqfs", features = ["stream"] }
futures = "0.3"
num_cpus = "1.15"
pin-project = "1.0"
safecast = { path = "../safecast" }
uuid = "1.3"

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.25", features = ["macros"] }
