[package]
name = "b-tree"
version = "0.1.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "A persistent B+ tree using freqfs"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/b-tree"

keywords = ["persistent", "ordered", "key", "index", "collection"]
categories = ["database", "database-implementations", "data-structures"]

[features]
all = ["logging", "stream"]
logging = ["log", "freqfs/logging"]
stream = ["async-trait", "collate/stream", "destream", "freqfs/stream"]

[[example]]
name = "example"
required-features = ["stream"]

[dependencies]
async-trait = { version = "0.1", optional = true }
collate = "0.3"
destream = { version = "0.7", optional = true }
freqfs = "0.8"
futures = "0.3"
get-size = "0.1"
log = { version = "0.4", features = ["release_max_level_info"], optional = true }
num_cpus = "1.15"
pin-project = "1.0"
safecast = "0.2"
uuid = "1.4"

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.29", features = ["macros"] }
